<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020202"
    android:orientation="vertical"
    android:weightSum="4">

    <!--        -->

    <LinearLayout
        android:id="@+id/top_nav_menu"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="0dp"

        android:orientation="horizontal"
        android:paddingStart="20dp"

        android:paddingEnd="20dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.mb_lab.mbviewlib.ImageViewManagment.RoundImageView
                android:id="@+id/btnHomeProfile"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/profile_round_icon" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:background="@drawable/deposit_btn_bg"
                android:backgroundTint="@color/gray"
                android:drawableStart="@drawable/search_icon"
                android:gravity="center"
                android:hint="Search Here"
                android:importantForAutofill="no"
                android:paddingStart="10dp"
                android:textColorHint="#7A8696"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/startScanner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/scan" />

            <ImageView
                android:id="@+id/support"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/support" />

            <ImageView
                android:id="@+id/homeNotification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/bell_notification_icon" />

            <ImageView
                android:id="@+id/btnHomePay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/pay_icon" />
        </LinearLayout>


    </LinearLayout>
    <!--  -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingStart="20dp"


        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/nav_menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/balance_banner_bg"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/balance_type_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/total_balan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_flex_regular"
                    android:gravity="center"
                    android:text="@string/totalBalance"
                    android:textAppearance="@style/textStyle"
                    android:textColor="#AAAAAA"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/total_balan_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_flex_regular"
                    android:gravity="center"
                    android:text="@string/total_balance_type"
                    android:textAppearance="@style/textStyle"
                    android:textColor="#AAAAAA"

                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/drop_down_arrow" />
            </LinearLayout>



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_below="@+id/balance_type_linear"
                android:layout_alignStart="@+id/balance_type_linear"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance_type_linear"
                app:srcCompat="@drawable/gold" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textFieldBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView6"
                android:layout_below="@+id/balance_type_linear"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/imageView"
                android:background="@color/transparent"
                android:clickable="true"
                android:gravity="left|center"
                android:maxEms="7"
                android:padding="0dp"
                app:boxStrokeWidth="0dp"
                app:endIconCheckable="true"
                app:endIconMode="password_toggle"

                app:endIconScaleType="center"
                app:endIconTint="@color/gray_txt"
                app:hintTextColor="@color/yellow"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/deposit_btn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.562">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="none"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:padding="0dp"
                    android:text="000.00"
                    android:drawablePadding="5dp"
                    android:textColor="@color/yellow"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@+id/imageView"
                android:layout_alignStart="@+id/imageView"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.392"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/bdt_icon" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:autoSizeTextType="uniform"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:maxEms="10"
                android:padding="0dp"
                android:text="00.00"
                android:textColor="@color/yellow"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/deposit_btn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textFieldBalance"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.307" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/deposit_btn"
                android:layout_width="78dp"
                android:layout_height="44dp"
                android:layout_alignTop="@+id/textFieldBalance"
                android:layout_alignParentEnd="true"
                android:background="@drawable/deposit_btn_bg"
                android:gravity="center"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/textFieldBalance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textFieldBalance">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/deposit"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_transa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/pay_icon_se"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:srcCompat="@drawable/pay_icon_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:gravity="top|center"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/p2p_icon_se"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:srcCompat="@drawable/p2p_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:gravity="top|center"
                android:text="@string/p2p"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sendCash_icon_se"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:srcCompat="@drawable/send_cash_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:gravity="top|center"
                android:text="@string/sendCash"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobileTopUp_icon_se"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:srcCompat="@drawable/mobile_top_up__round" />

            <TextView
                android:id="@+id/pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"

                android:gravity="center"
                android:text="@string/mobileTopUp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="126dp"
                    android:layout_height="122dp"
                    app:srcCompat="@drawable/comming_soon_locked" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>